<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ชื่อสินค้า"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/editProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/nameproduct" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editpriceproduct"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/editProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"
        android:hint="@string/editprice" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numberproductedit"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/editProductDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editnumber" />

</LinearLayout>